Edit dream drive

--- a/entries/virtualdreamdrive210722.html
+++ b/entries/virtualdreamdrive210722.html
@@ -30,7 +30,7 @@
             The landscape was digital and verdant, live oaks drooping and strange southern birds whooping from invisible gaps in what must, somewhere, behind it all, have been a code. 
         </p>
         <p>
-            At some point, if you peel enough layers off a dream, you surely end up with something resembling binary, something far less human.
+            At some point, if you peel enough layers off a dream, you surely end up with something resembling binary, far less human.
         </p>
         <p>
             Perhaps that's not the case. Perhaps you just roll back endless bales of dream webbing. Impossibly fertile fields, impossible to harvest, welting with life. 
