Add number of images

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/mexicandog.jpg" alt="lone dog on dappled cotton" id="mexicandogpic"><p>lone dog on dappled cotton</p></div>
 
-        <div class="imgcontainersmallsquare"><img src="./resources/images/treeedit.jpg" alt="beneath this silver birch and vapour trail, people were covered in mud, burning up, trying to complete a marathon. we walked and watched, breathing relatively free." id="treeeditpic"><p>beneath this silver birch and vapour trail, people were covered in mud, burning up, trying to complete a marathon.</p></div>
+        <div class="imgcontainersmallsquare"><img src="./resources/images/treeedit.jpg" alt="beneath this silver birch and vapour trail, people were covered in mud, burning up, trying to complete a marathon. we walked and watched, breathing relatively free." id="treeeditpic"><p>beneath this silver birch and vapour trail people were covered in mud, burning up, trying to complete a marathon</p></div>
 
         <div class="imgcontainershortlandscape"><img src="./resources/images/sleepingcat.jpg" alt="lone cat on dream felt" id="sleepingcatpic"><p>lone cat on dream felt</p></div>
 
@@ -96,8 +96,19 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/redrock.jpg" alt="red rock and rolled out blues" id="redrockpic"><p>red rock and rolled out blues</p></div>
 
-        <div class="imgcontainerportrait"><img src="./resources/images/guineapig.jpg" id="guineapigpic" alt="galactic guinea pig, winged and ruling from the pane"><p>galactic guinea pig, winged and ruling from the pane</p></div>
+        <div class="imgcontainerportrait"><img src="./resources/images/guineapig.jpg" id="guineapigpic" alt="galactic guinea pig, winged and ruling from the pane"><p>galactic gopher, winged and ruling from the pane</p></div>
 
+        <div class="imgcontainersmallsquare"><img src="./resources/images/woodwalk.jpg" alt="woodland bath path" id="woodwalkpic"><p>woodland bath path</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/stormcloud.jpg" alt="cumulonimbus wired to fuck" id="stormcloudpic"><p>cumulonimbus wired to fuck</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/birthday.jpg" alt="candlecake for the elderstep" id="birthdaypic"><p>candlecake for the elderstep</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/sunoverhorses.jpg" alt="sundrop over the horse yard" id="sunoverhorsespic"><p>sundrop over the horse yard</p></div>
+
+        <div class="imgcontainersmallsquare"><img src="./resources/images/skyframe.jpg" alt="skypatch and mainframe" id="skyframepic"><p>skypatch and mainframe</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/treestand.jpg" alt="mooncrop and treestand" id="treestandpic"><p>mooncrop and treestand</p></div>
     </div>
 
 </body>
