Edit forest pic caption

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div class="imgcontainerlonglandscape"><img src="./resources/images/widetree.jpg" alt="the silver tree's cousins, turned on their sides" id="widetreepic"><p>the silver tree's cousins, turned on their sides</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/treewalk.jpg" alt="the further you can see through forests, the further you walk" id="treewalkpic"><p>the further you can see through forests, the further you walk</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/treewalk.jpg" alt="the further you can see through forests, the further you walk" id="treewalkpic"><p>the further you see through forests, the further you walk</p></div>
 
         <div class="imgcontainerlonglandscape"><img src="./resources/images/heronalone.jpg" alt="lone heron in a pixel field, no gulls, still scrubbed through two screens" id="heronalonepic"><p>lone heron in a pixel field, no gulls, <br>still scrubbed through two screens</p></div>
 
