Add cartographer and add to index

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <p>flashes + phantoma</p>
         <p>magic + machine</p>
         <p>dawn cuts evening blues</p>
+        <p><span id="cartographertitle"><a href="./entries/projects/cartographer.html">cartographer! cartographer!</a></span><span id="cartographerinfo"> - an experiment in how to map disappearing text</span></p>
     
     <div class="navigationtitle">
         optic verve
