--- a/entries/projects/cartographer.html
+++ b/entries/projects/cartographer.html
@@ -36,7 +36,7 @@
         <p id="line20">the story I begin with is in no way the beginning</p>
         <p id="line21">I think of it sitting somewhere in the middle</p>
         <p id="line22">reeling out and reeling inward</p>
-        <p id="line23">mess we're soon to map together</p>
+        <p id="line23">a mess we're soon to map together</p>
         <p id="line24">nets ballooning, full of phantom</p>
         <p id="line25">surfing under the eversong</p>
         <div id="compass2">
