Add link to opening compass in cartographer

--- a/entries/projects/cartographer.html
+++ b/entries/projects/cartographer.html
@@ -12,7 +12,7 @@
 
     <div class="mainpoem">
         <div id="compass">
-            <div id="compassicon"><img src="../../resources/images/icons/compass.png"></div>
+            <div id="compassicon"><a href="../../index.html"><img src="../../resources/images/icons/compass.png"></a></div>
         </div>
         <p id="line1">calling all mapmakers</p>
         <p id="line2">a horn for amateur botanists</p>
