--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
         <div class="imgcontainersmallsquare"><img src="./resources/images/skyframe.jpg" alt="skypatch and mainframe" id="skyframepic"><p>skypatch and mainframe</p></div>
 
         <div class="imgcontainerhigher"><img src="./resources/images/treestand.jpg" alt="mooncrop and treestand" id="treestandpic"><p>mooncrop and treestand</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/petshop.jpg" alt="scalefursale" id="petshoppic"><p>scalefursale</p></div>
     </div>
 
 </body>
