Improve formatting of cartographer

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>flashes + phantoma</p>
         <p>magic + machine</p>
         <p>dawn cuts evening blues</p>
-        <p><span id="cartographertitle"><a href="./entries/projects/cartographer.html">cartographer</a></span><span id="cartographerinfo"> - an experiment in how to map disappearing text</span></p>
+        <p><span id="cartographertitle"><a href="./entries/projects/cartographer.html">cartographer</a></span><span id="cartographerinfo"> - an experiment in how to map disappearing characters</span></p>
     
     <div class="navigationtitle">
         optic verve
