Minor edit on cartographer

--- a/entries/projects/cartographer.html
+++ b/entries/projects/cartographer.html
@@ -44,7 +44,7 @@
         <p id="line28">perhaps without knowing it</p>
         <p id="line29">if one wished to attach a metaphor to these proceedings:</p>
         <p id="line30">walking panes of glass, clean or uncleaned</p>
-        <p id="line31">depending how you wish to peer through them</p>
+        <p id="line31">depends on how you wish to peer through them</p>
         <p id="line32">you could also try:</p>
         <p id="line33">dirty bits of mirror, bumping into themselves</p>
         <p id="line34">or never touching at all</p>
