Add renegade and dryfishing

--- a/entries/amazonia140522.html
+++ b/entries/amazonia140522.html
@@ -28,7 +28,7 @@
             so we don't all run out of space.
         </p>
         <p>When the wall of water comes up, it can cover the tops of trees in all directions, at which point who 
-            really knows what we're looking at any more.
+            really knows what we're looking at any more?
         </p>
         <p>It was never the same back then and these are the days my friend (and these are the days, my friend).</p>
         <p>Locate that on a distant folding beach. Be a genius. Then play it. Get something back to me, just so I know
