--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
     <div class="links">
         <p>
             <a href="./entries/amazonia140522.html">amazonia140522</a>
+            <br><a href="./entries/dryfishing310722.html">dryfishing310722</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
             <br><a href="./entries/poolinsect020722.html">poolinsect020722</a>
             <br><a href="./entries/prometheanparty240622.html">prometheanparty240622</a>
+            <br><a href="./entries/renegadestripes010822.html">renegadestripes010822</a>
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
             <br><a href="./entries/videoreps250522.html">videoreps230522</a>
