Additional edit to renegade - correct typo

--- a/entries/renegadestripes010822.html
+++ b/entries/renegadestripes010822.html
@@ -24,7 +24,7 @@
     <div class="mainentry">
         <p>Running for no more than 20 minutes in the heat, I walked instead to cool down, uphill, thinking about the architecture of techno that carries a euphoric tint.</p>
         <p>There are certain forms of dance music that have me picturing rafters in a vast room, metal girders across echoing ceiling space. I say 'picture', but this isn't really a visual thing - it's not about imagining warehouse raves or vibrating arenas of corrugated tin.</p>
-        <p>It's more to do with the structure of music itself, the construct, simultaneous layers, not just a line of time, but highwire strip lights over deep, flavoured earth, tang above tiger depth, judderflah and sting over solid foundations.</p>
+        <p>It's more to do with the structure of music itself, the construct, simultaneous layers, not just a line of time, but highwire strip lights over deep, flavoured earth, tang above tiger depth, judderflash and sting over solid foundations.</p>
         <p>Will-o'-the-wisp in a yard of timber. Moonflitter swamp with its boomtangle weeds. Song lines in the far forest. We're running away from the buildings now.</p>
         <p>Days like this, can't stand the architecture of the sun as it bakes through our city, but I can deal with the shapes in my ear.</p>
     </div>
