--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <p>flashes + phantoma</p>
         <p>magic + machine</p>
         <p>dawn cuts evening blues</p>
-        <p><span id="cartographertitle"><a href="./entries/projects/cartographer.html">cartographer</a></span><span id="cartographerinfo"> - an experiment in how to map disappearing characters</span></p>
+        <p><span id="cartographertitle"><a href="./entries/projects/cartographer.html">cartographer, cartographer</a></span><span id="cartographerinfo"> - an experiment in how to map disappearing characters</span></p>
+        <p><span id="achievementstitle"><a href="./entries/projects/achievements.html">achievements</a></span><span id="achievementsinfo"> - an interview about wanting to be interviewed</span></p>
     
     <div class="navigationtitle">
         optic verve
@@ -114,6 +115,8 @@
         <div class="imgcontainerhigher"><img src="./resources/images/treestand.jpg" alt="mooncrop and treestand" id="treestandpic"><p>mooncrop and treestand</p></div>
 
         <div class="imgcontainerhigher"><img src="./resources/images/petshop.jpg" alt="scalefursale" id="petshoppic"><p>scalefursale</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/cathide.jpg" alt="burrow" id="cathidepic"><p>burrow</p></div>
     </div>
 
 </body>
