--- a/entries/projects/achievements.html
+++ b/entries/projects/achievements.html
@@ -184,6 +184,30 @@
         <div class="interviewer">Do you think it's about leaving behind a legacy, or is it more than that? Is there something in the act itself?</div>
         <div class="responder">My firm presented me with an award last year. It means my name goes in the company brochure. I might even get a plaque, something for future employees to remember me by, though they'll never have met me, so I'm not sure 'remember' is the right word. But it could be there for years. Just my name. Etched on a metal plate.</div>
     </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">I'm going to quote you something, and I want you to tell me what comes next -</div>
+        <div class="responder">Who said this?</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">"Living defensively is the central theme of our age..." </div>
+        <div class="responder">"... how else can we live?"</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">Do you remember it?</div>
+        <div class="responder">"Sometimes I write in the dark. At first it would come as a shock to turn on the light and see how big all the writing looked on top of each other or falling off the page."</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">You can stop now, you don't need to quote any more. </div>
+        <div class="responder"></div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer"></div>
+        <div class="responder"></div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer"></div>
+        <div class="responder"></div>
+    </div>
 
 </body>
 </html>
