--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div class="links">
         <p>
             <a href="./entries/amazonia140522.html">amazonia140522</a>
+            <br><a href="./entries/bodzin270822.html">bodzin270822</a>
             <br><a href="./entries/dryfishing310722.html">dryfishing310722</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
             <br><a href="./entries/poolinsect020722.html">poolinsect020722</a>
