Add parts to achievements

--- a/entries/projects/achievements.html
+++ b/entries/projects/achievements.html
@@ -198,6 +198,110 @@
     </div>
     <div class="achievementsmainpoem">
         <div class="interviewer">You can stop now, you don't need to quote any more. </div>
+        <div class="responder">I can stop now, I don't need to say any more than that.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">What are your hopes after death?</div>
+        <div class="responder">A reasonable pension.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">And your friends?</div>
+        <div class="responder">Not much really, can't say I've given it too much thought. I don't like detritus.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">But what about your friends?</div>
+        <div class="responder">A few of them phone me when I least expect it. Some of them have sort of dropped off.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">Died.</div>
+        <div class="responder">Blossom-end rot. I've read about it in gardening magazines. </div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">Any new year resolutions?</div>
+        <div class="responder">Less rice.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">And what about the others?</div>
+        <div class="responder">Looking back, I really am far less than I've projected myself to be. In fact, it's pretty much all projection.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">So you don't consider yourself to be a musician? Everyone else sees you that way. Does that seem strange to you?</div>
+        <div class="responder">I struggle to understand how the recordings still exist. I thought I saw them buried. Earth on top of earth, before my very eyes.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">What made you do such a thing?</div>
+        <div class="responder">My parents discouraged me from pursuing a career in anything that didn't speak for itself.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">Can you describe your childhood for me?</div>
+        <div class="responder">I grew up around kind people who gave everything and asked for nothing.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">And what do they think of you today?</div>
+        <div class="responder">I try to call home four times a year, let them know I'm still going. We never have that much to talk about. I end up talking about myself.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">They must be very proud.</div>
+        <div class="responder">I never really understood pride, what it was all about. Another reason I should have had children. They teach you that sort of thing.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">Where are your children now?</div>
+        <div class="responder">You can see what it really means to them, somewhere deep within the eyes.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">You mean, you don't think this is what they wanted for you, after all?</div>
+        <div class="responder">They would never have allowed it. That's why it's so strange hearing those tapes now - it's a reminder of part of me that wasn't allowed to carry on.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">What did they think?</div>
+        <div class="responder">You know how a fast-moving train, whilst travelling through a tunnel, is surrounded and preceded by its own roar? Its noise becomes a separate kind of animal, fiercer than the object it was made by. It sort of overshadows everything it once depended on. I think that's the sort of thing I was trying to capture in those tapes. How am I supposed to explain that to them?</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">Some listeners have said it made them want to lie down and hide away under dim light.</div>
+        <div class="responder">The way the noise of everything becomes too much, too fast. Yes, I can understand that.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer"></div>
+        <div class="responder"></div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer"></div>
+        <div class="responder"></div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer"></div>
+        <div class="responder"></div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer"></div>
+        <div class="responder"></div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer"></div>
+        <div class="responder"></div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer"></div>
+        <div class="responder"></div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer"></div>
+        <div class="responder"></div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer"></div>
+        <div class="responder"></div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer"></div>
+        <div class="responder"></div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer"></div>
+        <div class="responder"></div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer"></div>
         <div class="responder"></div>
     </div>
     <div class="achievementsmainpoem">
