--- a/entries/projects/achievements.html
+++ b/entries/projects/achievements.html
@@ -128,7 +128,7 @@
     </div>
     <div class="achievementsmainpoem">
         <div class="interviewer">Is that why you gave it up in the end?</div>
-        <div class="responder">I suppose that's why I gave it up in the end. Turned my attention to other things. I gave myself up. People always need buildings. Started doing the kinds of drawing that matter.</div>
+        <div class="responder">I suppose that's why I gave it up in the end. Kicked my attention down other avenues. I gave myself up. People always need buildings. Started doing the kind of drawing that matters. Started doing things that get away with pretending to matter, without mattering at all.</div>
     </div>
     <div class="achievementsmainpoem">
         <div class="interviewer">Have you ever saved a life?</div>
@@ -250,7 +250,7 @@
     </div>
     <div class="achievementsmainpoem">
         <div class="interviewer">You mean, you don't think this is what they wanted for you, after all?</div>
-        <div class="responder">They would never have allowed it. That's why it's so strange hearing those tapes now - it's a reminder of part of me that wasn't allowed to carry on.</div>
+        <div class="responder">They would never have allowed it. That's why it's so strange hearing those tapes now - it's a reminder of a part of me that wasn't allowed to carry on.</div>
     </div>
     <div class="achievementsmainpoem">
         <div class="interviewer">What did they think?</div>
